--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,25 @@
       href="https://fonts.googleapis.com/css?family=Montserrat"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./app/spinnner.css" />
   </head>
   <body>
-    <app-root></app-root>
+    <app-root>
+      <div class="container">
+        <div class="row">
+          <div id="loader">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="loading"></div>
+          </div>
+        </div>
+      </div>
+    </app-root>
   </body>
 </html>
